--- a/cac/templates/saludo.html
+++ b/cac/templates/saludo.html
@@ -7,6 +7,6 @@
     <title>Hola Chuchis</title>
 </head>
 <body>
-    <h1 style="color:blue">{titulo}</h1>
+    <h1 style="color:blue">{{titulo}}</h1>
 </body>
 </html>
