--- a/cac/templates/cursos.html
+++ b/cac/templates/cursos.html
@@ -11,7 +11,7 @@
 
     <ul>
         {% for curso in cursos %}
-            <li></li>
+            <li>{{curso.nombre}}</li>
         {% endfor %}
     </ul>
 
